adding more words about velocity dispersino

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -26,15 +26,17 @@ further hints that the spin-down rate is mass-dependent \citep{curtis2019}.
 Unfortunately, without rotation periods for members of old open clusters, or
 any large group of old stars with precisely measured ages, it is extremely
 difficult to calibrate the rotation-color relations at old ages.
-For this reason, we turn to a population-based stellar age proxy: velocity
-dispersion.
+For this reason, we turned to a population-based stellar age proxy: velocity
+dispersion in order to investigate the period-temperature relations at old
+ages.
 
 \subsection{Kinematics as an age proxy}
 
-Stars are usually born in the thin disk of the Milky Way and orbit the center
-of the galaxy with a low out-of-plane, or vertical, velocity ($W$, or $v_z$).
-Young stars have relatively low vertical velocities, but gain angular momentum
-in the vertical direction over time.
+Stars are thought to be born in the thin disk of the Milky Way, orbiting the
+center of the galaxy with a low out-of-plane, or vertical, velocity ($W$, or
+$v_z$).
+Young stars have relatively small vertical velocities, but gain angular
+momentum in the vertical direction over time.
 Although the cause of orbital heating is not well understood, interactions
 with giant molecular clouds are thought to play an important role.
 
@@ -42,20 +44,28 @@ Stellar velocities have a long history of being used as an age proxy, with
 several notable examples within stellar astronomy \citep[\eg][]{faherty2009,
 west2011}.
 
-A star's vertical {\it action} is a better indication of its age than its
-velocity, because it is integrated over the Milky Way's potential, and
-therefore position invariant -- \eg\ a star will have the same action at
-periapsis and apoapsis.
+Vertical {\it actions} are better age indicators than velocities, because
+actions are calculated by integrating angular momentum over the Milky Way's
+potential, and are therefore position invariant -- \eg\ a star will have the
+same action at periapsis and apoapsis.
 In contrast, a star's velocity will be different at periapsis and apoapsis --
 so in this sense, {\it actions} are the natural quantities to use as age
 proxies.
 However, actions can only be calculated will full 6-dimensional position and
-velocity information, yet most stars with rotation periods do not have radial
-velocity measurements because they are \kepler\ targets and most \kepler\
-targets are relatively faint (between $\sim$11th and $~$18th magnitudes).
+velocity information, yet most stars with measured rotation periods do not
+have radial velocity measurements because they are \kepler\ targets and most
+\kepler\ targets are relatively faint (between $\sim$11th and $~$18th
+magnitudes).
 For this reason, we used an alternative age proxy: velocity in the direction
 of galactic latitude, \vb.
 Since these stars only have proper motions, parallaxes and positions, with no
 radial velocites, we could not calculate full 3D velocities or actions.
 However, since the \kepler\ field is at low galactic latitude, \vb is a close
 approximation to $v_z$.
+
+Although the velocity of any individual star will only provide a weak age
+constraint, the velocity dispersion of a group of stars can indicate whether,
+on average, that group is old or young relative to other groups.
+In this work we compare the velocity dispersions of groups of stars to
+ascertain which groups are older and which younger and draw conclusions based
+on the implied relative ages of populations.
