--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -4,17 +4,15 @@ This limit is set by the oldest open clusters whose members have precise light
 curves, and therefore photometric rotation periods.
 However, recent evidence suggests that the relationship between rotation
 period and color/temperature/mass does not remain constant over large
-timescales, as has long been assumed.
-Old clusters seem to have a flatter relationship between rotation period and
-color than young clusters.
-In addition, old field stars with asteroseismic ages, observed by the \kepler\
-spacecraft, appear to be rotating more rapidly than expected for their ages
-and masses.
+timescales, contradicting the long-held assumption.
+New results show that old clusters appear to have a flatter relationship
+between rotation period and color than young clusters.
 In this work we use the velocity dispersion of groups of stars as a proxy for
 age in order to demonstrate that the relationship between rotation period and
-effective temperature not only changes over time but even appears to invert.
-At young ages G stars rotate more rapidly than K and M dwarfs, but at old ages
-they appear to rotate more rapidly.
+effective temperature not only changes over time.
+Not only this, the slope of the period-\teff\ relation even appears to invert:
+at young ages G stars rotate more rapidly than K and M dwarfs, but at old ages
+they rotate more rapidly.
 In addition, we show that stars rotating just below the rotation period gap
-are dynamically young, we ruling out the possibility that the rotation period
-gap is caused by incorrect period measurements or binary companions.
+are dynamically young, ruling out the possibility that the rotation period gap
+is caused by incorrect period measurements or binary companions.
