adding vb shortcut

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -63,6 +63,7 @@
 \newcommand{\mct}{\citet{mcquillan2014}}
 \newcommand{\bvector}{${\bf b}$}
 \newcommand{\python}{{\it Python}}
+\newcommand{\vb}{$v_{\bf b}$}
 
 \newcommand{\racomment}[1]{{\color{blue}#1}}
 
