--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -21,8 +21,13 @@ It was recently shown that old stars appear to be too rapidly rotating for
 their age, \citep{angus2015, vansaders2016, vansaders2018} and that a
 mass-dependent modification to the classical \citet{skumanich1972} spin-down
 law was needed in order to fit the data \citep{vansaders2016, vansaders2018}.
-In addition, an even more recent analysis of middle-aged open clusters provide
-further hints that the spin-down rate is mass-dependent \citep{curtis2019}.
+In addition, an even more recent analysis of middle-aged open clusters
+provides further hints that the spin-down rate is mass-dependent
+\citep{curtis2019}.
+Rotation period measurements of the 1.1 Gyr open cluster NGC 6811 reveal a
+flattened relationship between rotation period and color, where the G dwarfs
+are rotating at the same rate as the K dwarfs.
+
 Unfortunately, without rotation periods for members of old open clusters, or
 any large group of old stars with precisely measured ages, it is extremely
 difficult to calibrate the rotation-color relations at old ages.
