--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -69,7 +69,8 @@
 
 \begin{document}
 
-\title{Exploring the ages of rotating stars using galactic dynamics}
+\title{Exploring the ages of rotating stars using galactic dynamics: a novel
+approach to calibrating gyrochronology}
 
 \author{%
     Ruth Angus,
@@ -88,6 +89,8 @@
 % \altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai'i at
 % M\={a}noa, Honolulu, HI, USA}
 
+% Still to do: deredden before calculating ages.
+
 % Word limit: 3500
 
 % Word limit: 250
@@ -99,7 +102,7 @@
 \include{intro}
 % FIGURE: The gap
 
-% Word limit: 750
+% Word limit: 500
 \include{method}
 % FIGURE: The CMD.
 % FIGURE: The age histogram.
